# libs-rust

./: .gitignore  README.md
algorithms/binary_search/: Cargo.toml  README.md
algorithms/binary_search/src/: lib.rs
algorithms/bubble_sort/: Cargo.toml  README.md
algorithms/bubble_sort/src/: lib.rs
algorithms/graph/: Cargo.toml  README.md
algorithms/graph/src/: lib.rs
algorithms/insertion_sort/: Cargo.toml  README.md
algorithms/insertion_sort/src/: lib.rs
algorithms/linear_search/: Cargo.toml  README.md
algorithms/linear_search/src/: lib.rs
algorithms/merge_sort/: Cargo.toml  README.md
algorithms/merge_sort/src/: lib.rs
algorithms/quick_sort/: Cargo.toml  README.md
algorithms/quick_sort/src/: lib.rs
data-structures/matrix/: Cargo.toml  README.md
data-structures/matrix/src/: lib.rs
data-structures/matrix/src/methods/: add.rs  mod.rs  subtract.rs  transpose.rs
data-structures/vector/: Cargo.toml  README.md
data-structures/vector/src/: lib.rs
matrix/: Cargo.toml
matrix/src/: lib.rs  main.rs
matrix/src/class/: class.rs  matrix.rs  mod.rs
matrix/src/class/methods/: adjugate.rs  determinant.rs  inverse.rs  mod.rs  multiplication.rs  pseudoinverse.rs  transpose.rs
matrix/src/methods/: adjugate.rs  elementwise_multiply.rs  inverse.rs  mod.rs  multiplication.rs  pseudoinverse.rs
network/: Cargo.toml  README.md
network/src/: activation.rs  lib.rs
pruebita/: Cargo.toml
pruebita/src/: main.rs
