[package]
name = "pruebita"
version = "0.1.0"
edition = "2024"

[dependencies]
# matrix = {path = "../data-structures/matrix/"}
# vector = {path = "../data-structures/vector/"}
linear_search = {path = "../algorithms/linear_search/"}
binary_search = {path = "../algorithms/binary_search/"}
bubble_sort = {path = "../algorithms/bubble_sort/"}
insertion_sort = {path = "../algorithms/insertion_sort/"}
merge_sort = {path = "../algorithms/merge_sort/"}
